--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,7 @@ after_success: |
   mkdir -p coverage &&
   kcov coverage script.sh &&
   bash <(curl -s https://codecov.io/bash)
+
+env:
+  global:
+    secure: 
