--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ after_success: |
   rm -rf kcov-master &&
   mkdir -p coverage &&
   kcov coverage ocr-script.sh &&
-  bash <(curl -s https://codecov.io/bash)
+  bash <(curl -s https://codecov.io/gh/tsrsilva/ocr-script)
